# spotify2tidal

./: .env.example  .gitignore  Cargo.toml  README.md  main.py  requirements.txt
src/: config.py  config.rs  error.rs  lib.rs  logger.py  main.rs  matcher.rs  migrator.py  spotify_client.py  tidal_client.py
src/migrator/: mod.rs  orchestrator.rs  report.rs
src/spotify/: client.rs  mod.rs  models.rs
src/tidal/: client.rs  mod.rs  models.rs
