[package]
name = "spotify2tidal"
version = "0.1.0"
edition = "2024"
description = "Migrate Spotify playlists to Tidal"

[dependencies]
# API clients
rspotify = { version = "0.13", default-features = false, features = ["client-reqwest", "reqwest-native-tls"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for Tidal API)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"

# UI
indicatif = "0.17"
colored = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2"
urlencoding = "2"
